Remove `SockJS` usage