@@ -24,12 +24,10 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.socket.client.WebSocketClient;
 import org.springframework.web.socket.client.standard.StandardWebSocketClient;
 import org.springframework.web.socket.messaging.WebSocketStompClient;
-import org.springframework.web.socket.sockjs.client.RestTemplateXhrTransport;
 import org.springframework.web.socket.sockjs.client.SockJsClient;
 import org.springframework.web.socket.sockjs.client.Transport;
 import org.springframework.web.socket.sockjs.client.WebSocketTransport;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -37,9 +35,8 @@ public class StompClientConfiguration {
     @Bean
     WebSocketStompClient stompClient(RestTemplate restTemplate) {
         final WebSocketClient webSocketClient = new StandardWebSocketClient();
-        final List<Transport> webSocketTransports = Arrays.asList(
-                new WebSocketTransport(webSocketClient),
-                new RestTemplateXhrTransport(restTemplate)
+        final List<Transport> webSocketTransports = List.of(
+                new WebSocketTransport(webSocketClient)
         );
         final SockJsClient sockJsClient = new SockJsClient(webSocketTransports);
         // without SockJS: new WebSocketStompClient(webSocketClient)
